Fix FAQ spacing

--- a/css/index.css
+++ b/css/index.css
@@ -241,9 +241,12 @@ html {
 
 #faqs {
   margin-left: 3vw;
-  font-size: 48px;
+  margin-right: 3vw ;
+  font-size: 36px;
   font-weight: 500;
   padding-left: 5vw;
+  padding-right: 5vw;
+  margin-top: 5vh;
 }
 #faqs img {
   height: 48px;
@@ -252,33 +255,32 @@ html {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   #faqs {
-    font-size: 7vw;
-    margin: 5vw;
+    font-size: 5vw;
+    margin-top: 6vw;
   }
   #faqs img {
-    height: 7vw;
+    height: 6vw;
     padding-right: 3vw;
+    margin-top: 1px;
   }
 }
 .accordion {
-  margin-bottom: 10px;
+  margin-bottom: 24px;
 }
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .accordion {
-    margin-bottom: 0;
+    margin-bottom: 5vw;
   }
 }
 .accordion button {
   cursor: pointer;
-  padding: 10px;
   width: 100%;
   text-align: left;
   border: none;
   outline: none;
   transition: background-color 0.3s ease;
   display: inline-flex;
-  align-items: center;
 }
 .accordion button:hover {
 }
@@ -292,7 +294,17 @@ html {
 }
 .accordion .panel p {
   margin-top: 0;
-  margin-left: 20px;
+  margin-left: 70px;
+  font-weight: 300;
+}
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .accordion .panel p {
+    margin-left: 7vw;
+  }
+  .accordion button {
+    margin-bottom: 2vw;
+  }
 }
 
 /* Bottom Sheet
